--- a/src/components/Item/style.scss
+++ b/src/components/Item/style.scss
@@ -70,6 +70,8 @@ font-size: 1.5rem;
 .price {
   font-weight: 700;
   font-size: 1.3rem;
+  width: 100%;
+  text-align: center;
 }
 
 .descWrapper {
