--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -10,7 +10,7 @@
 
 .inputContainer {
   background-color: rgb(193, 223, 244);
-  width: 102vw;
+  width: 100vw;
 padding: 0.6rem 1rem 0rem 1rem;
 display: flex;
 justify-content: center;
@@ -22,7 +22,7 @@ justify-content: center;
 
 .homeContainer {
   background-color: #d7d5d5;
-  width: 102vw;
+  width: 100vw;
   min-height: 100vh;
   margin-top: -1rem;
   padding-right: 1rem;
@@ -30,19 +30,28 @@ justify-content: center;
   flex-direction: column;
 }
 
-.title {
+.titleWrapper {
   height: 5rem;
-  width: 102vw;
+  width: 100vw;
   font-family: 'Oswald', sans-serif;
-  font-weight: 600;
-  font-size: 2rem;
   text-align: center;
   background-color: rgb(193, 223, 244);
-  padding: 0rem 1rem;
+  padding: 0rem 0.5rem;
   margin-bottom: -2rem;
   display: flex;
   justify-content: center;
   align-items: center;  
+  flex-direction: column;
+}
+
+.title {
+  font-weight:700;
+  font-size: 2.3rem;
+  margin-bottom: -1.3rem;
+  margin-top: 1rem;
+}
+
+.contactText {
 }
 
 .productsContainer {
@@ -76,8 +85,39 @@ box-shadow: -6px 7px 13px -6px rgba(0,0,0,0.86);
   transform: translateY(2px);
 }
 
+.new {
+  position: absolute;
+  margin-bottom: 18rem;
+  left: 5.2rem;
+  display: block;
+	height: 24px;
+	line-height: 24px;
+	background: #4c4c4c;
+	color: #FFF;
+	padding: 0px 10px 0 10px;
+	z-index:1;
+  border-radius: 0.1rem 0rem 0rem 0.1rem;
+  &:after{
+    position: absolute;
+    right:-5px;
+    top:0;
+    content: "";
+    border-right:  5px solid transparent;
+    border-bottom: 12px solid #4c4c4c;
+    border-top:    12px solid #4c4c4c;
+  }
+  
+  &.red{
+   background: #d90000;
+     &:after{
+      border-color: #d90000 transparent #d90000 transparent;
+     }
+  }
+}
+
 .isSold {
   background-color: #8d8d8d;
+  font-weight: 600;
 }
 
 .sold {
@@ -87,6 +127,7 @@ box-shadow: -6px 7px 13px -6px rgba(0,0,0,0.86);
   width: 17rem;
   position: absolute;
   text-align: center;
+  
 }
 
 .imageContainer {
