--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -1,4 +1,5 @@
 .navContainer {
+  height: 4.7rem;
   display: flex;
   justify-content: flex-end;
   align-content: center;
@@ -6,16 +7,21 @@
   background-color: black;
   padding: 0.7rem;
   color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 .contactUs {
   padding: 0.3rem;
-  margin-right: -1rem;
+  margin-right: -0.5rem;
 }
 
 .mobilePhone {
-  margin-left: 1.3rem;
-  border: solid 0.5px gray;
+  margin-left: 1rem;
+  margin-right: 0.5rem;
+  border: solid 1.2px gray;
   padding: 0.3rem;
   border-radius: 0.2rem;
 }
