add: new products

--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -201,3 +201,19 @@ box-shadow: -6px 7px 13px -6px rgba(0,0,0,0.86);
 .homePrice {
   font-weight: 600;
 }
+
+.soonTitle {
+  background-color: rgb(193, 223, 244);
+  font-weight: 500;
+  width: 80%;
+  color: rgb(53, 53, 53);
+  text-align: center;
+  border-radius: 0.1rem;
+  margin-bottom: -1rem
+}
+
+.soonContainer {}
+
+.soonImage {
+  margin-bottom: -1.5rem;
+}
