--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -9,7 +9,7 @@
 }
 
 .inputContainer {
-  background-color: rgb(193, 223, 244);
+  background-color: pink;
   width: 100vw;
   padding: 1rem 1rem 0rem 1rem;
   display: flex;
@@ -35,7 +35,7 @@
   width: 100vw;
   font-family: 'Oswald', sans-serif;
   text-align: center;
-  background-color: rgb(193, 223, 244);
+  background-color: pink;
   margin-bottom: -2rem;
   padding-bottom: 0.3rem;
   display: flex;
@@ -203,7 +203,7 @@ box-shadow: -6px 7px 13px -6px rgba(0,0,0,0.86);
 }
 
 .soonTitle {
-  background-color: rgb(193, 223, 244);
+  background-color: pink;
   font-weight: 500;
   width: 80%;
   color: rgb(53, 53, 53);
