--- a/src/pages/ProductPage/style.scss
+++ b/src/pages/ProductPage/style.scss
@@ -1,5 +1,5 @@
 .productWrapper {
-  background-color: #d7d5d5;
+  background-color: #fff;
   min-height: 100vh;
   width: 100%;
   padding-bottom: 2rem;
