--- a/src/pages/ProductPage/style.scss
+++ b/src/pages/ProductPage/style.scss
@@ -11,6 +11,12 @@
  padding: 1rem;
  margin-top: 10rem;
 }
+.back-link {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  margin-top: 70px;
+}
 
 /* CSS */
 .button-30 {
