--- a/src/components/Item/style.scss
+++ b/src/components/Item/style.scss
@@ -4,15 +4,22 @@ $laptop-breakpoint: 769px;
 .productDescContainer {
   padding: 1rem;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: row;
+  padding: 20px 40px;
+
+  @media screen and (max-width: $laptop-breakpoint) {
+    align-items: flex-start;
+    flex-direction: column-reverse;
+    padding: 0 20px;
+  }
 }
 
 .productName {
   font-weight: 700;
   font-size: 1.5rem;
+  margin-top: 0;
 }
 
 .imagesContainer {
@@ -23,23 +30,27 @@ $laptop-breakpoint: 769px;
   margin-bottom: 1rem;
   height: 30rem;
   width: 90%;
+  padding: 0 40px;
 
   @media screen and (min-width: $tablet-breakpoint) {
     height: 40%;
-    width: 30%;
+    width: 60%;
+  }
+
+  @media screen and (max-width: $laptop-breakpoint) {
+    width: 100%;
   }
 }
 
 .swiper {
   width: 100%;
   height: 100%;
-  border-radius: 0.7rem;
+  & .swiper-button-next,
+  & .swiper-button-prev {
+    color: pink;
+  }
 }
 
-.swiper .swiper-button-next, 
-.swiper .swiper-button-prev {
-  color: pink;
-}
 
 .swiper-slide {
   text-align: center;
@@ -68,15 +79,19 @@ $laptop-breakpoint: 769px;
   object-fit: cover;
 }
 
-.productImage {
-  border-radius: 0.7rem;
-}
-
-.price {
-  font-weight: 700;
-  font-size: 1.3rem;
-  width: 100%;
-  text-align: center;
+.productInfoContainer {
+  width: 40%;
+  padding: 40px;
+  margin: 0 40px 0 20px;
+  border: 1px solid grey;
+  border-radius: 4px;
+  @media screen and (max-width: $laptop-breakpoint) {
+    width: 100%;
+    margin: 20px;
+    border: none;
+    margin: 0;
+    padding-top: 0;
+  }
 }
 
 .description {
