--- a/src/components/Price/style.scss
+++ b/src/components/Price/style.scss
@@ -2,12 +2,13 @@
   font-weight: 700;
   font-size: 2rem;
   width: 100%;
+  margin: 0.5em 0;
 }
 
 .homePrice {
   display: flex;
   align-items: center;
   width: fit-content;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1rem;
 }
