--- a/src/pages/ProductPage/style.scss
+++ b/src/pages/ProductPage/style.scss
@@ -1,3 +1,6 @@
+$tablet-breakpoint: 600px;
+$laptop-breakpoint: 769px;
+
 .productWrapper {
   background-color: #fff;
   min-height: 100vh;
@@ -5,12 +8,14 @@
   padding-bottom: 2rem;
 }
 
-
-
 .link {
- padding: 1rem;
- margin-top: 10rem;
+  padding: 1rem;
+  margin-top: 10rem;
+  @media screen and (max-width: $tablet-breakpoint) {
+    padding: 1em 2rem 0;
+  }
 }
+
 .back-link {
   display: flex;
   align-items: flex-start;
@@ -30,7 +35,6 @@
   color: #36395A;
   cursor: pointer;
   display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
   height: 40px;
   justify-content: center;
   line-height: 1;
